--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -259,69 +259,37 @@ section {
     }
 }
 
-.about {
-    // background-color: $yellow;
-    background-image: url(../images/blob-haikei.svg);
-    background-repeat: no-repeat;
-    background-size: cover;
+
+.about .row{
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    gap: 2rem;
-    margin-top: 5rem;
+    gap: 1.5rem;
+}
+.about .row .image{
+    flex:1 1 30rem;
+    padding: 1rem;
+}
+.about .row .image img{
+    width: 100%;
+    border-radius: .5rem;
+    border: 1rem solid $yellow;
+}
 
-    .video-container {
-        flex: 1 1 42rem;
+.about .row .content{
+    flex: 1 1 45rem;
+}
 
-        video {
-            border-radius: 1rem;
-            width: 100%;
-        }
+.about .row .content h3{
+    font-size: 3.5rem;
+    color: #fff;
+}
 
-        .controls {
-            text-align: center;
-            padding: 2rem 0;
-
-            span {
-                display: inline-block;
-                height: 2rem;
-                width: 2rem;
-                border-radius: 50%;
-                background: $white;
-                cursor: pointer;
-                margin: .7rem;
-
-                &:hover {
-                    background: $yellow;
-                }
-            }
-        }
-
-    }
-
-    .content {
-        flex: 1 1 42rem;
-        margin-top: 5rem;
-
-        span {
-            color: $blue;
-            font-weight: 800;
-            font-size: 2rem;
-        }
-
-        h3 {
-            color: $white;
-            font-size: 4rem;
-            margin-top: .5rem;
-        }
-
-        p {
-            padding: 1rem 0;
-            font-size: 1.4rem;
-            color: $white;
-            line-height: 2;
-        }
-    }
+.about .row .content p{
+    font-size: 1.5rem;
+    color: #eee;
+    padding: 1rem 0;
+    line-height: 2;
 }
 
 .detail_about {
@@ -459,33 +427,84 @@ section {
     background-image: url(../images/blob-haikei.svg);
     background-repeat: no-repeat;
     background-size: cover;
+
+    .content{
+        text-align: center;
+        margin-top: 50px;
+    }
 }
 
-.lineup .box-container {
-    columns: 3 25rem;
-    column-gap: 1.5rem;
+.lineup .home-slider .swiper-slide{
+    overflow: hidden;
+    border-radius: .5rem;
+    height: 50rem;    
+    width: 35rem;
 
-    .box {
-        margin-bottom: 1rem;
-        break-inside: avoid;
-
-        img {
-            width: 100%;
-            border-radius: 1rem;
-            margin-bottom: 1rem;
-        }
-
-        span {
-            font-size: 1.4rem;
-            color: $light-color;
-        }
-
-        h3 {
-            margin-top: .5rem;
-            font-size: 2rem;
-            color: $white;
-        }
-    }
+    .card {
+        width: 35rem;
+        height: 55rem;
+        background: $yellow;
+        padding: .4em;
+        border-radius: 6px;
+      }
+      
+      .card-image {
+        background-color: rgb(236, 236, 236);
+        width: 100%;
+        height: 70%;
+        border-radius: 6px 6px 0 0;
+        object-fit: cover;
+      }
+      
+      .card-image:hover {
+        -webkit-transform: scale(0.98);
+            -ms-transform: scale(0.98);
+                transform: scale(0.98);
+      }
+      
+      .category {
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 1.7em;
+        font-weight: 600;
+        color: rgb(63, 121, 230);
+        padding: 10px 7px 0;
+      }
+      
+      .category:hover {
+        cursor: pointer;
+      }
+      
+      .heading {
+        font-size: 1.5rem;
+        font-weight: 600;
+        color: rgb(88, 87, 87);
+        padding: 7px;
+      }
+      
+      .heading:hover {
+        cursor: pointer;
+      }
+      
+      .author {
+        color: gray;
+        font-weight: 400;
+        font-size: 11px;
+        padding-top: 20px;
+      }
+      
+      .name {
+        font-weight: 600;
+      }
+      
+      .name:hover {
+        cursor: pointer;
+      }
+}
+.lineup .home-slider .swiper-slide img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 
 .blogs{
