--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -62,8 +62,8 @@ section {
   background: none;
 }
 .btn:hover {
-  background: #1c9dcc;
-  color: #f6b418;
+  background: #ffffff;
+  color: #1c9dcc;
 }
 
 .header {
