--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -84,8 +84,8 @@ section {
     background: none;
 
     &:hover {
-        background: $blue;
-        color: $yellow;
+        background: $white;
+        color: $blue;
     }
 
 }
